--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.16",
+    "@arcjet/node": "^1.0.0-beta.16",
     "bcryptjs": "^3.0.3",
     "chatify": "file:..",
     "cloudinary": "^2.8.0",
