--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.1",
     "nodemon": "^3.1.11",
-    "resend": "^6.6.0"
+    "resend": "^6.6.0",
+    "socket.io": "^4.8.3"
   }
 }
